# rsops

./: .gitignore  Cargo.toml
rsops/: Cargo.toml
rsops/src/: main.rs
rsops/src/ebpf/: Makefile  bpf_helpers.h
rsops/src/ebpf/socket_filter/: Makefile
rsops/src/ebpf/socket_filter/ebpf_prog/: sock_filter.c  sock_filter.elf
rsops/src/ebpf/xdp/: Makefile
rsops/src/ebpf/xdp/ebpf_prog/: xdp_dump.c  xdp_dump.elf
rsops/src/lib/: libbpf.rs  mod.rs
rsops/src/load/: loader.rs  map_io.rs  mod.rs
rsops/src/module/: bpf.rs  mod.rs  perf.rs  xdp.rs
rsops/src/virtual/: main.c  make.md
rsops/src/virtual/include/bcc/: bpf.h  footer.h  proto.h
src/: main.rs
src/lib/: libbpf.rs  mod.rs
src/virtual/: make.md
src/virtual/include/bcc/: helpers.h
src/virtual/lib/clang/include/: stdarg.h
