[package]
name = "rsops"
version = "0.1.0"
authors = ["szuwgh <895340293@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.0.10"
goblin = "0.2"
zero = "0.1"
bpf-sys = { path = "../bpf-sys", version = "^1.3.0" }
libc = "0.2"
futures = "0.3"
mio = "0.6"
tokio = { version = "^0.2.4", features = ["full"] }
lazy_static = "1.0"
byteorder = "1"  

